k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  # 3 pods running multi-server image
  replicas: 3
  # this is the selector deployment will use
  selector:
    matchLabels:
      component: server
  # pod template
  template:
    metadata:
      # should match up to what we put in the spec itself
      labels:
        component: server
    spec:
      # containers the pod should run
      containers:
        - name: server
          image: tkousek/multi-server
          ports:
            - containerPort: 5000
