k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      # what this pod is running.
      containers:
        - name: worker
          image: tkousek/multi-worker
          # Env variables passed into the container when it's created in the pod
