k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  #selector so service knows what sets of pods to provide access too
  selector:
    component: web
  ports:
    # how other pods access this pod
    - port: 3000
    # port on the target pod 
      targetPort: 3000
