k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    # create ingress controller based on nginx project
    kubernetes.io/ingress.class: nginx
    # remove the "/api part"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # https://www.udemy.com/docker-and-kubernetes-the-complete-guide/learn/v4/t/lecture/11628364?start=0  50s
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - tkousek.com
        - www.tkousek.com
      secretName: tkousek-com
  rules:
    # if someone comes to this site, here is the set of rules we want applied to that request.
    - host: tkousek.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # redirect "/api/" to the server
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.tkousek.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # redirect "/api/" to the server
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
